[package]
name = "rtsched-rs"
version = "0.1.0"
edition = "2021"
authors = ["Marc Fischer <marcfir@proton.me>"]
license = "MIT OR Apache-2.0"
description = "Rust friendly wrapper for sched_attr on Linux"
keywords = ["scheduling", "linux", "rt", "real-time"]
categories = ["os::linux-apisos::linux-apissched"]
repository = "https://github.com/marcfir/rtsched-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2" }
nix = { version = "0.28", features = ["process", "sched"] }
bitflags = "2.4"
